# Weld_map_understanding_and_weld_traceability_assistant

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  weld_cli.py
config/: config.yaml  roi_template_default.json
data/final/: evaluation_report.json
docs/: module-spec-summary.md  project-retrospective.en.md  project-retrospective.zh-CN.md  sample-data.md  sample-profile-analysis.md
eval/: sample_ground_truth.json
schemas/: structured_drawing.schema.json
src/weld_assistant/: __init__.py  app.py  cli.py  config.py  contracts.py
src/weld_assistant/db/: repository.py  schema.py
src/weld_assistant/modules/: __init__.py  classifier.py  fusion.py  ingestion.py  layout.py  ocr.py  preprocessing.py  vlm.py
src/weld_assistant/services/: evaluation.py  exporter.py  pipeline.py  progress.py  review.py
src/weld_assistant/utils/: files.py
tests/: test_classifier.py  test_evaluation.py  test_fusion.py  test_ocr.py  test_progress.py  test_repository.py  test_review.py  test_services.py
